[gd_scene load_steps=2 format=3 uid="uid://c0c24nmp4opui"]

[ext_resource type="Script" path="res://scripts/scenes/ui/settings.gd" id="1_ykty5"]

[node name="Settings" type="CenterContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ykty5")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_type_variation = &"HeaderLarge"
text = "Settings"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="ImmediateMoveCheckBox" type="CheckBox" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "immediate movement"

[node name="Label2" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_type_variation = &"HeaderMedium"
text = "Key bindings"
horizontal_alignment = 1

[node name="GridContainer" type="GridContainer" parent="VBoxContainer"]
layout_mode = 2
columns = 2

[node name="FwdButton" type="Button" parent="VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Move Forward"

[node name="FwdLabel" type="Label" parent="VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="BackButton" type="Button" parent="VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Move Back"

[node name="BackLabel" type="Label" parent="VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="LeftButton" type="Button" parent="VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Turn left"

[node name="LeftLabel" type="Label" parent="VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="RightButton" type="Button" parent="VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Turn right"

[node name="RightLabel" type="Label" parent="VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="StrafeLeftButton" type="Button" parent="VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Strafe left"

[node name="StrafeLeftLabel" type="Label" parent="VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="StrafeRightButton" type="Button" parent="VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Strafe right"

[node name="StrafeRightLabel" type="Label" parent="VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="AttackButton" type="Button" parent="VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Attack"

[node name="AttackLabel" type="Label" parent="VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Control" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="CloseButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "CLOSE"

[connection signal="toggled" from="VBoxContainer/HBoxContainer/ImmediateMoveCheckBox" to="." method="_on_immediate_move_check_box_toggled"]
[connection signal="pressed" from="VBoxContainer/CloseButton" to="." method="_on_close_button_pressed"]
